Fix spacings and added logo on the main page

--- a/src/assets/scss/pages/successful-resumes/resume-page.scss
+++ b/src/assets/scss/pages/successful-resumes/resume-page.scss
@@ -19,10 +19,6 @@
 		margin-left: -$spacer/2;
 	}
 
-	.successful-resume-works-at img {
-		margin-left: -$spacer/2;
-	}
-
 	.similar-resumes {
 		color: #808080;
 		font-size: 14px;
